-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
None
-
Lustre 2.1.0-23chaos
-
3
-
8050
When a sysadmin attempted to unmount an OST which was hosted by the failover OSS (intending to restart is on the primary OSS), he hit the following assertion:
2012-02-29 12:02:09 Lustre: lsc-OST00b7: shutting down for failover; client state will be preserved. 2012-02-29 12:02:09 LustreError: 20218:0:(lu_object.c:1251:key_fini()) ASSERTION(cfs_atomic_read(&key->lct_used) > 1) failed 2012-02-29 12:02:09 LustreError: 20218:0:(lu_object.c:1251:key_fini()) LBUG 2012-02-29 12:02:09 Pid: 20218, comm: umount 2012-02-29 12:02:09 2012-02-29 12:02:09 Call Trace: 2012-02-29 12:02:09 [<ffffffffa039b895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] 2012-02-29 12:02:09 [<ffffffffa039bdc7>] lbug_with_loc+0x47/0xb0 [libcfs] 2012-02-29 12:02:09 [<ffffffffa03a542d>] libcfs_assertion_failed+0x2d/0x30 [libcfs] 2012-02-29 12:02:09 [<ffffffffa04f6ee8>] key_fini+0xf8/0x170 [obdclass] 2012-02-29 12:02:09 [<ffffffffa04f714b>] lu_context_key_quiesce+0x5b/0x90 [obdclass] 2012-02-29 12:02:09 [<ffffffffa04f71d9>] lu_context_key_quiesce_many+0x59/0x80 [obdclass] 2012-02-29 12:02:09 [<ffffffffa09e8d3f>] vvp_type_stop+0x2f/0x40 [lustre] 2012-02-29 12:02:09 [<ffffffffa04f5ef9>] lu_types_stop+0x49/0x60 [obdclass] 2012-02-29 12:02:09 [<ffffffffa04ef8bd>] lustre_common_put_super+0x49d/0x960 [obdclass] 2012-02-29 12:02:09 [<ffffffffa04cdbc6>] ? class_name2dev+0x56/0xd0 [obdclass] 2012-02-29 12:02:09 [<ffffffffa04eff4f>] server_put_super+0x1cf/0xc20 [obdclass] 2012-02-29 12:02:09 [<ffffffff811928f6>] ? invalidate_inodes+0xf6/0x190 2012-02-29 12:02:09 [<ffffffff81179c2b>] generic_shutdown_super+0x5b/0xe0 2012-02-29 12:02:09 [<ffffffff81179d16>] kill_anon_super+0x16/0x60 2012-02-29 12:02:09 [<ffffffffa04ea146>] lustre_kill_super+0x36/0x60 [obdclass] 2012-02-29 12:02:09 [<ffffffff8117aca0>] deactivate_super+0x70/0x90 2012-02-29 12:02:09 [<ffffffff81196c4f>] mntput_no_expire+0xbf/0x110 2012-02-29 12:02:09 [<ffffffff811976eb>] sys_umount+0x7b/0x3a0 2012-02-29 12:02:09 [<ffffffff810818d1>] ? sigprocmask+0x71/0x110 2012-02-29 12:02:09 [<ffffffff8100b0f2>] system_call_fastpath+0x16/0x1b 2012-02-29 12:02:09