LU-1165 obdclass: print more debug info in key_fini

in key_fini, if there are the key's values in lu_context,
then lu_context_key.lct_used will be larger than 1 for
it was set as 1 when the key was registered and incremented
for each value allocated for some lu_context.

Change-Id: I5ee753aba6539b32cdfde29a83e31f843abb95c4
Signed-off-by: Hongchao Zhang <hongchao.zhang@whamcloud.com>